# forJaime

./: main.py  pyproject.toml  wav.py
Scripts/: append.py  generation.py  loudness.py  plot.py  record.py  trimwav.py
