[tool.poetry]
name = "pdc_scripts"
version = "0.1.0"
description = ""
authors = ["Daniel Qu <daniel.qu@mclaren.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyaudio = "^0.2.13"
wave = "^0.0.2"
scipy = "^1.10.0"
matplotlib = "^3.6.3"
pydub = "^0.25.1"
argparse = "^1.4.0"
noisereduce = "^2.0.1"
numpy = "^1.23.5"
numba = "^0.56.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
